--- a/src/assets/styles/sass/components/_collapse.scss
+++ b/src/assets/styles/sass/components/_collapse.scss
@@ -19,7 +19,7 @@
   &__chevron {
     color: white;
     font-size: 1.2rem;
-    transition: transform 500ms ease-out;
+    transition: transform 300ms ease-out;
     &--active {
       transform: rotate(-180deg);
     }
@@ -43,27 +43,21 @@
 }
 
 .collapseContent {
-  padding: 15px;
   border-radius: 0 0 5px 5px;
   color: $primary-color;
   display: grid;
   max-width: 100%;
+  opacity: 0;
+  height: 0px;
+  transition: all 300ms;
+  transform: scaleY(0.7);
+  transform-origin: top;
+  padding-left: 15px;
   &--active {
-    animation: collapseAnimation 400ms ease-out forwards;
-  }
-}
-
-@keyframes collapseAnimation {
-  0% {
-    grid-template-rows: 0fr;
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  100% {
-    grid-template-rows: 1fr;
+    padding: 15px 15px 0 15px;
+    height: 100%;
     opacity: 1;
-    transform: translateY(0px);
-    background-color: #f6f6f6;
+    transform: scaleY(1);
   }
 }
 
